--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@ bower.json
 
 # Ignore application configuration
 /config/application.yml
+
+# Ignore application configuration
+/config/application.yml
