--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ config/local_env.yml
 /vendor/assets/bower_components
 *.bowerrc
 bower.json
-
+as 
 # Ignore pow environment settings
 .powenv
 
@@ -44,3 +44,6 @@ bower.json
 
 # Ignore application configuration
 /config/application.yml
+
+# Ignore cloudinary yml file
+/config/cloudinary.yml
